chore: update to invui 2.0